--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,10 +19,12 @@
     <link rel="stylesheet" href="{{ $style.Permalink }}">
 </head>
 <body>
+    {{ partial "header.html" . }}
+
     {{ block "main" . }}
         
     {{ end }}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    {{ partial "footer.html" . }}
 </body>
 </html>
