Move values to config file

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarToggler">
-                <a class="navbar-brand" href="#">Myriam Tousignant</a>
+                <a class="navbar-brand" href="#">{{ .Site.Title }}</a>
                 
                 <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
