--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,11 +6,11 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarToggler">
-                <a class="navbar-brand" href="#">{{ .Site.Title }}</a>
+                <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
                 
                 <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                    <a class="nav-link active" aria-current="page" href="/">Accueil</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Projets</a>
