--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -20,3 +20,25 @@
     max-height: 480px;
   }
 }
+
+/* List of projects */
+.flex-container {
+  list-style: none;
+}
+
+/* Cover images in list of projects */
+.flex-container img {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
+/* Summary images on homepage */
+.summary img {
+  max-height: 100%;
+  min-width: 100%;
+  max-width: 480px;
+  object-fit: cover;
+  vertical-align: bottom;
+}
