--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-   <div class="text-center mt-5">
+   <div class="container text-center mt-5">
     {{ range where (where .Site.Pages "Section" "projets") "Params.Featured" true }}
         {{ .Render "summary" }}
     {{ end }}
