--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,7 @@
                     <a class="nav-link active" aria-current="page" href="/">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Projets</a>
+                    <a class="nav-link" href="/projets">Projets</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Livres d'artiste</a>
