--- a/layouts/projets/summary.html
+++ b/layouts/projets/summary.html
@@ -1,3 +1,3 @@
-<div>
-    <a href="{{ .Permalink }}" class=''><img src="{{ .Params.SummaryImage }}" alt="Image de projet" class='mb-2' style="width: 720px; height: 480px; object-fit: cover;"></a>
+<div class="summary">
+    <a href="{{ .Permalink }}" class=''><img src="{{ .Params.SummaryImage }}" alt="Image de projet" class='img-fluid mb-2' style="object-fit: cover;"></a>
 </div>
