--- a/layouts/projets/single.html
+++ b/layouts/projets/single.html
@@ -1,43 +1,48 @@
 {{ define "main" }}
     <div class="container">
+
         <!-- Carousel -->
-        <div id="carouselExampleControls" class="carousel carousel-dark slide mx-auto" data-bs-ride="carousel" data-bs-interval="false" style="width: 720px; height: 480px;">
+        {{ with .Params.projectImages}}
+        <div id="carouselControls" class="carousel carousel-dark slide mx-auto" data-bs-ride="carousel" data-bs-interval="false" style="width: 720px; height: 480px;">
+            {{/*  Indicators  */}}
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="d-flex justify-content-center"><img src="http://www.myriamtousignant.com/wp-content/uploads/2021/08/20210729_182315871.jpg" alt=""></div>
-                </div>
-                <div class="carousel-item">
-                    <div class="d-flex justify-content-center"><img src="http://www.myriamtousignant.com/wp-content/uploads/2021/08/20210802_180940700.jpg" alt=""></div>
-                </div>
-                <div class="carousel-item">
-                    <div class="d-flex justify-content-center"><img src="http://www.myriamtousignant.com/wp-content/uploads/2021/08/20210802_180940892.jpg" alt=""></div>
-                </div>
+                {{ $active := true }}
+                {{ $i := 0 }}
+                {{ range $.Params.projectImages }}
+                    <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="{{ $i }}" class="{{ if $active }} active {{ $active = false }} {{ end }}" aria-current="true" aria-label="Image {{ add $i 1 }}"></button>
+                    {{ $i = add $i 1 }}
+                {{ end }}
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+
+            {{/*  Carousel items  */}}
+            <div class="carousel-inner">
+                {{ $active := true }}
+                {{ range $.Params.projectImages }}
+                    {{ $resource := $.Resources.GetMatch . }}
+
+                    <div class="carousel-item {{ if $active }} active {{ $active = false }} {{ end }}">
+                        <div class="d-flex justify-content-center"><img src="{{ $resource.RelPermalink }}" alt="{{ . }}"></div>
+                    </div>
+                {{ end }}
+            </div>
+
+            {{/*  Prev / Next buttons  */}}
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+                <span class="visually-hidden">Précédent</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+                <span class="visually-hidden">Suivant</span>
             </button>
         </div> 
+        {{ end }}
         <!-- Carousel -->
 
         <!-- Page content -->
         <h1>{{ .Title }}</h1>
-        <p>Le projet multidisciplinaire Petites mains est né pour donner suite à la découverte des archives personnelles de ma grand-mère maternelle, Réjanne Martin, décédée à l’âge de 94 ans. Ces documents témoignent des nombreux changements survenus lors du siècle dernier et font écho à des enjeux récemment soulevés comme la place qu’occupent les aînés au sein de la société québécoise.</p>
-        <p>Depuis plusieurs mois, je développe une correspondance avec des femmes âgées de plus de 65 ans dans le but de découvrir leur parcours de vie et de collecter des images provenant de leur archive personnelle. Les sujets de la maternité, de l’enfance et du mariage font partie des thèmes qui ont été abordés jusqu’à présent. Les nombreuses photographies qui m’ont été partagées me permettent de développer une nouvelle série de dessins. Ces dessins sont par la suite numérisés puis imprimés pour la création de tissages de papier.</p>
-        <p>Au cours des prochains mois, j’entends également mener des entretiens auprès de ces femmes. L’objectif est de pouvoir éventuellement créer des capsules audios utilisées dans le cadre de ce projet comme élément de narration. La mise en ligne de ces capsules est prévue sur un site d’hébergement de podcast comme celui de Podbean et sur mon site personnel (à venir lors de la phase deux du projet). Une expérience immersive sous la forme d’une installation regroupant la diffusion des œuvres audio et des œuvres visuelles est prévue à la fin de ce cycle de création.</p>
-        <p>Mon objectif est qu'il émerge de ce processus des portraits de femmes intéressants qui témoignent de leur identité culturelle commune et convoque à vivre une expérience artistique. En terminant, je tiens à remercier le Conseil des arts et des lettres du Québec de son appui financier.</p>
 
-        <a href="https://www.calq.gouv.qc.ca" target="_blank"><img src="http://www.myriamtousignant.com/wp-content/uploads/2021/03/calq_logo.jpg" alt="CALQ" title="CALQ"></a>
-        <a href="https://culturemonteregie.qc.ca/" target="_blank"><img src="http://www.myriamtousignant.com/wp-content/uploads/2021/03/culture_monteregie_couleur_Modif.png" alt="Culture Montérégie" title="Culture Montérégie"></a>
+        {{ .Content }}
         <!-- END -- Page content -->
     </div>
 {{ end }}
