--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,7 +16,7 @@
                     <a class="nav-link" href="/projets">Projets</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Livres d'artiste</a>
+                    <a class="nav-link" href="/livres-artiste">Livres d'artiste</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Publications</a>
