--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="/livres-artiste">Livres d'artiste</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Publications</a>
+                    <a class="nav-link" href="/publications">Publications</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Biographie & démarche</a>
