--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/publications">Publications</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Biographie & démarche</a>
+                    <a class="nav-link" href="/biographie-demarche">Biographie & démarche</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Presse</a>
