Add section presse

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/biographie-demarche">Biographie & démarche</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Presse</a>
+                    <a class="nav-link" href="/presse">Presse</a>
                 </li>                              
                 </ul>
             </div>
