Update to image processing

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -16,8 +16,8 @@
 @media (min-width: 576px) {
   .carousel-item img {
     width: auto !important;
-    height: 480px;
-    max-height: 480px;
+    // height: 480px;
+    // max-height: 480px;
   }
 }
 
