--- a/layouts/projets/single.html
+++ b/layouts/projets/single.html
@@ -3,7 +3,7 @@
 
         <!-- Carousel -->
         {{ with .Params.projectImages}}
-        <div id="carouselControls" class="carousel carousel-dark slide mx-auto" data-bs-ride="carousel" data-bs-interval="false" style="width: 720px; height: 480px;">
+        <div id="carouselControls" class="carousel carousel-dark slide mx-auto mb-5" data-bs-ride="carousel" data-bs-interval="false">
             {{/*  Indicators  */}}
             <div class="carousel-indicators">
                 {{ $active := true }}
@@ -13,16 +13,18 @@
                     {{ $i = add $i 1 }}
                 {{ end }}
             </div>
-
+            
             {{/*  Carousel items  */}}
             <div class="carousel-inner">
                 {{ $active := true }}
                 {{ range $.Params.projectImages }}
                     {{ $resource := $.Resources.GetMatch . }}
-
+                    {{ $image := $resource.Resize "x560" }}
+                    {{ with $image }}
                     <div class="carousel-item {{ if $active }} active {{ $active = false }} {{ end }}">
-                        <div class="d-flex justify-content-center"><img src="{{ $resource.RelPermalink }}" alt="{{ . }}"></div>
+                        <div class="d-flex justify-content-center"><img src="{{ .RelPermalink }}" alt="{{ $.Title }}"></div>
                     </div>
+                    {{ end }}
                 {{ end }}
             </div>
 
@@ -34,7 +36,7 @@
             <button class="carousel-control-next" type="button" data-bs-target="#carouselControls" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Suivant</span>
-            </button>
+            </button>        
         </div> 
         {{ end }}
         <!-- Carousel -->
