--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -42,3 +42,57 @@
   object-fit: cover;
   vertical-align: bottom;
 }
+
+/* Image overlay */
+/* Container needed to position the overlay. Adjust the width as needed */
+.overlay-container {
+  position: relative;
+}
+
+/* The overlay effect - lays on top of the container and over the image */
+.overlay {
+  position: absolute;
+  bottom: 1.5rem;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.25); /* Black see-through */
+  color: #f1f1f1;
+  width: 100%;
+  transition: 0.5s ease;
+  opacity: 0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+}
+
+/* When you mouse over the container, fade in the overlay title */
+.overlay-container:hover .overlay {
+  opacity: 1;
+}
+
+.overlay-summary {
+  bottom: 3rem;
+  background-color: rgba(0, 0, 0, 0.25);
+  color: white;
+  font-size: 32px;
+  padding: 32px 64px;
+}
+
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.overlay-container:hover .img-fluid {
+  opacity: 0.3;
+}
+
+.overlay-container:hover .middle {
+  opacity: 1;
+}
