--- a/layouts/projets/summary.html
+++ b/layouts/projets/summary.html
@@ -1,7 +1,14 @@
 <div class="summary">
-    {{ $resource := .Resources.GetMatch (.Params.summaryImage) }}
-    {{ $image := $resource.Resize "x1500" }}
-    {{ with $image }}
-        <a href="{{ $.Permalink }}" class=''><img src="{{ $image.RelPermalink }}" alt="{{ $.Title }}" class='img-fluid mb-5'></a>
-    {{ end }}
+    <a href="{{ .Permalink }}" class=''>
+        {{ $resource := .Resources.GetMatch (.Params.summaryImage) }}
+        {{ $image := $resource.Resize "x1500" }}
+        {{ with $image }}
+            <div class="overlay-container">
+                <img src="{{ $image.RelPermalink }}" alt="{{ $.Title }}" class='img-fluid mb-5'>
+                <div class="middle">   
+                    <div class="overlay-summary">{{ $.Title }}</div>
+                </div>
+            </div>
+        {{ end }}
+    </a>        
 </div>
