--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,24 +9,15 @@
                 <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
                 
                 <ul class="navbar-nav mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Accueil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/projets">Projets</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/livres-artiste">Livres d'artiste</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/publications">Publications</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/biographie-demarche">Biographie & démarche</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/presse">Presse</a>
-                </li>                              
+                    <li class="nav-item">
+                        <a class="nav-link {{ if .IsHome }} active {{ end }}" aria-current="page" href="/">{{  .Site.Home.Title }}</a>
+                    </li>
+                    {{ range .Site.Sections }}
+                        <li class="nav-item">
+                            {{ $active := eq $.Section .Section }}
+                            <a class="nav-link {{ if $active }} active {{ end }}" href="{{ .Permalink }}">{{ .Title }}</a>
+                        </li>
+                {{ end }}
                 </ul>
             </div>
         </div>
