--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="{{ .Language.Lang }}">
+<html lang="{{ .Site.LanguageCode }}">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<meta property="og:url" content="{{ .Permalink }}"></meta>
+	<meta property="og:title" content="{{ .Title }}"></meta>	
+	<meta property="og:type" content="article"></meta>
+	<meta property="og:description" content="{{ .Site.Params.description }}"></meta>
+	<meta name="description" content="{{ .Site.Params.description }}" />
+	<meta name="keywords" content="{{ .Site.Params.keywords }}" />
+	<link rel="canonical" href="{{ .Permalink }}" />
     
+    <link rel="shortcut icon" href="/images/favicon.png" />
+
     <title>
         {{ block "title" . }}
             {{ .Site.Title }}
@@ -29,5 +40,15 @@
         {{ partial "footer.html" . }}
    
     </div>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      
+        ga('create', '{{ .Site.GoogleAnalytics }}', 'auto');
+        ga('send', 'pageview');
+    </script>    
 </body>
 </html>
