--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -96,3 +96,94 @@
 .overlay-container:hover .middle {
   opacity: 1;
 }
+
+/* social icons */
+@font-face {
+  font-family: 'si';
+  src: url('/images/social-icons/socicon.eot');
+  src: url('/images/social-icons/socicon.eot?#iefix')
+      format('embedded-opentype'),
+    url('/images/social-icons/socicon.woff') format('woff'),
+    url('/images/social-icons/socicon.ttf') format('truetype'),
+    url('/images/social-icons/socicon.svg#icomoonregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  @font-face {
+    font-family: si;
+    src: url(/images/social-icons/socicon.svg) format(svg);
+  }
+}
+
+.soc {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.soc li {
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+}
+
+.soc li a {
+  font-family: si !important;
+  font-style: normal;
+  font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+
+  -o-transition: 0.1s;
+  -ms-transition: 0.1s;
+  -moz-transition: 0.1s;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+
+  overflow: hidden;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  position: relative;
+  z-index: 1;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  font-size: 17px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  margin-right: 5px;
+  color: #ffffff;
+  background-color: #212529;
+}
+
+.soc-icon-last {
+  margin: 0 !important;
+}
+
+.soc-facebook:before {
+  content: '\e041';
+}
+.soc-twitter:before {
+  content: '\e040';
+}
+
+#content ul.soc {
+  float: right;
+  margin: 0;
+}
+
+/* END social icons */
