--- a/layouts/publications/single.html
+++ b/layouts/publications/single.html
@@ -3,6 +3,7 @@
         <!-- Page content -->
         <h1>{{ .Title }}</h1>
 
+        {{ partial "social-sharing.html" . }}
         {{ .Content }}
         <!-- END -- Page content -->
     </div>
