--- a/layouts/section/livres-artiste.html
+++ b/layouts/section/livres-artiste.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 <div class="container">
-    <h1>{{ .Title }}</h1>
+    <h1 class='mb-5'>{{ .Title }}</h1>
     
     <ul class="row flex-container ">
         {{ range where .Site.RegularPages "Section" "livres-artiste"}}
