--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class='footer bg-light'>
+<footer class='footer position-fixed bottom-0 start-0 w-100 bg-light'>
     <p>{{ .Site.Params.copyrightInfo }}</p>
 </footer>
 
