--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
                 
-                <ul class="navbar-nav mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link {{ if .IsHome }} active {{ end }}" aria-current="page" href="/">{{  .Site.Home.Title }}</a>
                     </li>
