--- a/layouts/partials/social-sharing.html
+++ b/layouts/partials/social-sharing.html
@@ -4,8 +4,7 @@
     }
 </script>
 
-<ul class="soc">
+<ul class="soc mb-3">
     <li><a class="soc-facebook" title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }} %>" onclick="openModal(this.href); return false;"></a></li>
     <li><a class="soc-twitter" title="Twitter" href="https://twitter.com/intent/tweet?text={{ .Site.Params.description }}&url={{ .Permalink }}" onclick="openModal(this.href);return false;"></a></li>
 </ul>
-<!-- <div class="clearfix"></div> -->
