--- a/layouts/publications/single.html
+++ b/layouts/publications/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     <div class="container">
         <!-- Page content -->
-        <h1>{{ .Title }}</h1>
+        <h1 class='mb-5'>{{ .Title }}</h1>
 
         {{ partial "social-sharing.html" . }}
         {{ .Content }}
