--- a/assets/sass/_image-list.scss
+++ b/assets/sass/_image-list.scss
@@ -12,3 +12,9 @@
   object-fit: cover;
   vertical-align: bottom;
 }
+
+@media (min-width: 576px) {
+  .carousel-item img {
+    width: auto !important;
+  }
+}
