--- a/assets/sass/_image-list.scss
+++ b/assets/sass/_image-list.scss
@@ -8,7 +8,7 @@
 .summary img {
   max-height: 100%;
   min-width: 100%;
-  max-width: 480px;
+  // max-width: 480px;
   object-fit: cover;
   vertical-align: bottom;
 }
