--- a/layouts/projets/single.html
+++ b/layouts/projets/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
     <div class="container">
 
+        {{ if not .Params.gridLayout  }}
         <!-- Carousel -->
         {{ with .Params.projectImages}}
         <div id="carouselControls" class="carousel carousel-dark slide mx-auto mb-5" data-bs-ride="carousel" data-bs-interval="false">
@@ -40,11 +41,23 @@
         </div> 
         {{ end }}
         <!-- Carousel -->
+        {{ end }}
 
         <!-- Page content -->
         <h1>{{ .Title }}</h1>
 
         {{ .Content }}
         <!-- END -- Page content -->
+
+        {{ if .Params.gridLayout }}
+        <ul class="row flex-container list-unstyled">
+            {{ range .Params.projectImages }}
+            <li class="col-lg-4 col-md-12">
+                <img src="{{ . }}" alt="" class="img-fluid img-thumbnail mb-4 mh-100 align-bottom">
+            </li>                
+            {{ end }}
+        </ul>            
+        {{ end }}
+
     </div>
 {{ end }}
