--- a/layouts/projets/single.html
+++ b/layouts/projets/single.html
@@ -23,7 +23,7 @@
                     {{ $image := $resource.Resize "x560" }}
                     {{ with $image }}
                     <div class="carousel-item {{ if $active }} active {{ $active = false }} {{ end }}">
-                        <div class="d-flex justify-content-center"><img src="{{ .RelPermalink }}" alt="{{ $.Title }}" class="img-fluid"></div>
+                        <div class="d-flex justify-content-center"><img src="{{ .RelPermalink }}" alt="{{ $.Title }}" class="img-fluid mb-1"></div>
                     </div>
                     {{ end }}
                 {{ end }}
