Add instagram link button

--- a/layouts/partials/social-sharing.html
+++ b/layouts/partials/social-sharing.html
@@ -5,6 +5,6 @@
 </script>
 
 <ul class="soc mb-3">
-    <li><a class="soc-facebook" title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }} %>" onclick="openModal(this.href); return false;"></a></li>
-    <li><a class="soc-twitter" title="Twitter" href="https://twitter.com/intent/tweet?text={{ .Site.Params.description }}&url={{ .Permalink }}" onclick="openModal(this.href);return false;"></a></li>
+    <li><a class="soc-facebook bg-light" title="Facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }} %>" onclick="openModal(this.href); return false;"></a></li>
+    <li><a class="soc-twitter bg-light" title="Twitter" href="https://twitter.com/intent/tweet?text={{ .Site.Params.description }}&url={{ .Permalink }}" onclick="openModal(this.href);return false;"></a></li>
 </ul>
