--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -8,3 +8,13 @@
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+
+.footer p {
+  font-size: 0.75rem !important;
+}
+
+@media (min-width: 576px) {
+  .footer p {
+    font-size: 1rem !important;
+  }
+}
