--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -9,9 +9,10 @@
                 <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
                 
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link {{ if .IsHome }} active {{ end }}" aria-current="page" href="/">{{  .Site.Home.Title }}</a>
+                    <li class="nav-item mt-1">
+                        <a class="nav-item-social soc-instagram bg-light text-muted" target="blank" title="Instagram" href="{{ .Site.Params.instagram }}"></a>
                     </li>
+
                     {{ range .Site.Sections }}
                         <li class="nav-item">
                             {{ $active := eq $.Section .Section }}
