Update publication layout

--- a/layouts/publications/li.html
+++ b/layouts/publications/li.html
@@ -1,5 +1,5 @@
 <li>
-    <p class='fw-bold'>{{ .Params.publicationDate }}</p>
+    <p class='lead'>{{ .Params.publicationDate }}</p>
     <a href="{{ .Permalink }}" class=''>
         {{ .Title }}
     </a>
