--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,8 +34,9 @@
       <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}"/>
     {{ end }}
 
-    <!-- {{ $style := resources.Get "sass/custom.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
-    <link rel="stylesheet" href="{{ $style.Permalink }}"> -->
+    {{ $built := resources.Get "js/index.js" | js.Build "main.js" }}
+    <script type="text/javascript" src="{{ $built.RelPermalink }}" defer></script>
+
 </head>
 <body>
     <div style="padding-bottom: 60px;">
