--- a/layouts/section/biographie-demarche.html
+++ b/layouts/section/biographie-demarche.html
@@ -3,7 +3,7 @@
         <!-- Page content -->
         <img src="{{ .Params.heroImage }}" alt="{{ .Title }}" class="img-fluid mb-5">
         
-        {{ partial "jumbotron.html" . }}
+        {{ partial "components/jumbotron.html" . }}
 
         {{ .Content }}
         <!-- END -- Page content -->
