--- a/layouts/section/projets.html
+++ b/layouts/section/projets.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class="container">
 
-    {{ partial "jumbotron.html" . }}
+    {{ partial "components/jumbotron.html" . }}
     
     <ul class="row flex-container list-unstyled">
         {{ range where .Site.RegularPages "Section" "projets"}}
