--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,37 +26,26 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-    {{ $styles := resources.Get "sass/custom.scss" | resources.ToCSS }}
+    {{ $styles := resources.Get "sass/main.scss" | resources.ToCSS }}
     {{ if .Site.IsServer }}
       <link rel="stylesheet" href="{{ $styles.RelPermalink }}"/>
     {{ else }}
       {{ $styles := $styles | resources.Minify | resources.Fingerprint  }}
       <link rel="stylesheet" href="{{ $styles.RelPermalink }}" integrity="{{ $styles.Data.Integrity }}"/>
     {{ end }}
-
-    <!-- {{ $style := resources.Get "sass/custom.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
-    <link rel="stylesheet" href="{{ $style.Permalink }}"> -->
 </head>
 <body>
     <div style="padding-bottom: 60px;">
-        {{ partial "header.html" . }}
+        {{ partial "header/site-header.html" . }}
 
         <div class="mt-4">
             {{ block "main" . }}{{ end }}
         </div>
     
-        {{ partial "footer.html" . }}
+        {{ partial "footer/site-footer.html" . }}
    
     </div>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id={{ .Site.GoogleAnalytics }}"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', '{{ .Site.GoogleAnalytics }}');
-    </script>  
+    {{ partial "footer/scripts.html" . }}
 </body>
 </html>
