--- a/layouts/projet-grille/single.html
+++ b/layouts/projet-grille/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
     <div class="container">
-        {{ partial "jumbotron.html" . }}
+        {{ partial "components/jumbotron.html" . }}
 
         {{ .Content }}
         
