--- a/layouts/projets/li.html
+++ b/layouts/projets/li.html
@@ -1,12 +1,5 @@
 <li class="col-lg-4 col-md-12">
     <a href="{{ .Permalink }}" class=''>
-        {{ $resource := .Resources.GetMatch (.Params.listImage) }}
-        {{ $image := $resource.Fill "880x560 center" }}
-        {{ with $image }}
-            <div class="overlay-container">
-                <img src="{{ .RelPermalink }}" alt="{{ $.Params.Title }}" class="img-fluid mb-4 mh-100 align-bottom">
-                <div class="overlay">{{ $.Params.Title }}</div>
-            </div>
-        {{ end }}
+        {{ partial "components/overlay--li.html" .}}
     </a>
 </li>
