--- a/layouts/section/presse.html
+++ b/layouts/section/presse.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
     <div class="container">
         <!-- Page content -->
-        {{ partial "jumbotron.html" . }}
+        {{ partial "components/jumbotron.html" . }}
 
         {{ .Content }}
         <!-- END -- Page content -->
