Update to image list styles

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'footer/site-footer';
 
 @import 'components/carousel';
+@import 'components/grid-images';
 @import 'components/image-list';
 @import 'components/overlay';
 @import 'components/social-icons';
