--- a/layouts/section/livres-artiste.html
+++ b/layouts/section/livres-artiste.html
@@ -2,10 +2,9 @@
 <div class="container">
     {{ partial "components/jumbotron.html" . }}
     
-    <ul class="row flex-container list-unstyled">
-        {{ range where .Site.RegularPages "Section" "livres-artiste"}}
-            {{ .Render "li" }}
-        {{ end }}
-    </ul>
+
+    {{ .Scratch.Set "section-type" "livres-artiste"}}
+    {{ partial "components/grid-projets.html" . }}
+
 </div>
 {{ end }}
