Update to image styles

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,6 +4,7 @@
 
 @import 'components/carousel';
 @import 'components/grid-images';
-@import 'components/image-list';
+@import 'components/grid-projets';
 @import 'components/overlay';
 @import 'components/social-icons';
+@import 'components/summary';
