Update to header and footer layout

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,7 +37,7 @@
     {{ end }}
 </head>
 <body>
-    <div style="padding-bottom: 60px;">
+    <div>
         {{ partial "header/site-header.html" . }}
 
         <div class="mt-4">
