--- a/assets/sass/footer/_site-footer.scss
+++ b/assets/sass/footer/_site-footer.scss
@@ -1,6 +1,6 @@
 .footer {
-  height: 60px; /* Set the fixed height of the footer here */
-  line-height: 60px; /* Vertically center the text there */
+  //height: 60px; /* Set the fixed height of the footer here */
+  //line-height: 60px; /* Vertically center the text there */
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
