--- a/layouts/partials/header/site-nav.html
+++ b/layouts/partials/header/site-nav.html
@@ -12,12 +12,17 @@
                     <a class="nav-item-social soc-instagram bg-light text-muted" target="blank" title="Instagram" href="{{ .Site.Params.instagram }}"></a>
                 </li>
 
-                {{ range .Site.Sections }}
+                <li class="nav-item">
+                    <a class="nav-link" href="/projets/petites-mains/">Petites mains</a>
+                </li>
+
+{{/*                {{ range .Site.Sections }}
                     <li class="nav-item">
                         {{ $active := eq $.Section .Section }}
                         <a class="nav-link {{ if $active }} active {{ end }}" href="{{ .Permalink }}">{{ .Title }}</a>
                     </li>
             {{ end }}
+*/}}
             </ul>
         </div>
     </div>
