--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -40,7 +40,7 @@
     <div>
         {{ partial "header/site-header.html" . }}
 
-        <div class="mt-4">
+        <div class="mt-4 w-75 mx-auto">
             {{ block "main" . }}{{ end }}
         </div>
     
