--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -37,9 +37,9 @@
     {{ end }}
 </head>
 <body>
-    <div>
+    <div class="d-flex flex-column justify-content-between min-vh-100">
         {{ partial "header/site-header.html" . }}
-
+           
         <div class="mt-4 w-75 mx-auto">
             {{ block "main" . }}{{ end }}
         </div>
