--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,12 +1,15 @@
 {{ define "main" }}
    <div class="container text-center mt-5">
-    <div class="summary">
-        <a href="https://www.pressepapier.net">
-            <div>
-                <img src="/images/maskipeche-fev2022-verso.jpg" alt="Maskipêche Février 2022" class='img-fluid mb-5 mh-100'>
-            </div>
-        </a>        
-    </div>
+       {{/*
+       <div class="summary">
+           <a href="https://www.pressepapier.net">
+               <div>
+                   <img src="/images/maskipeche-fev2022-verso.jpg" alt="Maskipêche Février 2022"
+                        class='img-fluid mb-5 mh-100'>
+               </div>
+           </a>
+       </div>
+       */}}
 
     {{ range where (where .Site.Pages "Section" "projets") "Params.Featured" true }}
         {{ .Render "summary" }}
