--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-   <div class="container text-center mt-5">
+   <div class="container text-center mt-3">
        {{/*
        <div class="summary">
            <a href="https://www.pressepapier.net">
@@ -10,6 +10,14 @@
            </a>
        </div>
        */}}
+
+    <div class="bg-light mb-5 p-3">
+        <iframe
+        src="https://www.facebook.com/plugins/video.php?height=476&href=https%3A%2F%2Fwww.facebook.com%2FatelierMTousignant%2Fvideos%2F628649481580636%2F&show_text=false&width=267&t=0"
+        width="267" height="476" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true"
+        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+    </div>
+
     {{ range where (where .Site.Pages "Section" "mediations") "Params.Featured" true }}
        {{ .Render "summary" }}
    {{ end }}
