--- a/layouts/partials/footer/site-footer.html
+++ b/layouts/partials/footer/site-footer.html
@@ -10,6 +10,8 @@
                 <h5 class="text-uppercase">Réalisations</h5>
                 <ul class="nav flex-column">
                     {{ partial "footer/link-footer" (dict "context" . "sections" .Site.Sections "linkSection" $.Section "title" "Projets") }}
+                    {{ partial "footer/link-footer" (dict "context" . "sections" .Site.Sections "linkSection" $.Section "title" "Art public") }}
+                    {{ partial "footer/link-footer" (dict "context" . "sections" .Site.Sections "linkSection" $.Section "title" "Expositions") }}
                     {{ partial "footer/link-footer" (dict "context" . "sections" .Site.Sections "linkSection" $.Section "title" "Médiations") }}
                     {{ partial "footer/link-footer" (dict "context" . "sections" .Site.Sections "linkSection" $.Section "title" "Livres d'artiste") }}
                 </ul>
